<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextCountry"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewPKID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PKID" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextCity"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Total" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSearch" />

        <Button
            android:id="@+id/buttonAddVisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonAddVisited" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonInsertRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonInsertRecord" />

    <Button
        android:id="@+id/buttonReadData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonReadData" />

    <Button
        android:id="@+id/buttonUpdateRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUpdateRecord" />

    <Button
        android:id="@+id/buttonDeleteRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDeleteRecord" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewResult" />
</LinearLayout>